--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/a380x_checklists.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/a380x_checklists.json5
@@ -130,7 +130,12 @@
         {
           "item": "RUDDER TRIM",
           "result": "NEUTRAL",
-          // "condition": ""
+          "condition": [
+            {
+              varName: "RUDDER TRIM PCT",
+              result: 0
+            }
+          ]
         },
         {
           "item": "PITCH TRIM",
@@ -172,14 +177,34 @@
           "type": "SUBLISTITEM",
           "item": "SIGNS",
           "result": "ON",
-          // "condition": ""
+          "condition": [
+            {
+              varName: "CABIN SEATBELTS ALERT SWITCH",
+              result: 1
+            },
+            {
+              varName: "L:XMLVAR_SWITCH_OVHD_INTLT_NOSMOKING_POSITION",
+              result: 2,
+              comp: "NE"
+            },
+            {
+              varName: "L:XMLVAR_SWITCH_OVHD_INTLT_EMEREXIT_POSITION",
+              result: 2,
+              comp: "NE"
+            },
+          ]
         },
         {
           "type": "SUBLISTITEM",
           "item": "SPLRS",
           "action": "ARM",
           "result": "ARMED",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_SPOILERS_ARMED",
+              result: 1
+            }
+          ]
         },
         {
           "type": "SUBLISTITEM",
@@ -190,7 +215,12 @@
           "type": "SUBLISTITEM",
           "item": "AUTO BRK",
           "result": "RTO",
-          // "condition": ""
+          "condition": [
+            {
+              varName: "L:A32NX_AUTOBRAKES_RTO_ARMED",
+              result: 1
+            }
+          ]
         },
         {
           "type": "SUBLISTITEM",
@@ -224,12 +254,34 @@
         {
           "item": "LDG GEAR",
           "result": "UP",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_GEAR_CENTER_SMALL_POSITION",
+              result: 0
+            },
+            {
+              varName: "L:A32NX_GEAR_CENTER_POSITION",
+              result: 0
+            },
+            {
+              varName: "L:A32NX_GEAR_LEFT_POSITION",
+              result: 0
+            },
+            {
+              varName: "L:A32NX_GEAR_RIGHT_POSITION",
+              result: 0
+            }
+          ]
         },
         {
           "item": "FLAPS",
           "result": "0",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_FLAPS_HANDLE_INDEX",
+              result: 0
+            }
+          ]
         },
         {
           "item": "PACKS 1+2",
@@ -238,7 +290,12 @@
         {
           "item": "APU MASTER",
           "result": "OFF",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:L:A32NX_OVHD_APU_MASTER_SW_PB_IS_ON",
+              result: 0
+            }
+          ]
         },
         {
           "type": "LINE",
@@ -248,12 +305,28 @@
         {
           "item": "LANDING LIGHTS",
           "result": "OFF",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:LIGHTING_LANDING_1",
+              result: 0,
+              comp: "NE"
+            },
+            {
+              varName: "L:LIGHTING_LANDING_2",
+              result: 0,
+              comp: "NE"
+            }
+          ]
         },
         {
           "item": "BARO REF STD",
           "result": "SET (BOTH)",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:XMLVAR_Baro1_Mode",
+              result: 3
+            },
+          ]
         }
       ]
     },
@@ -298,7 +371,12 @@
         {
           "item": "SEAT BELTS",
           "result": "ON",
-          // "condition": ""
+          condition: [
+            {
+              varName: "CABIN SEATBELTS ALERT SWITCH",
+              result: 1
+            }
+          ]
         }
       ]
     },
@@ -319,13 +397,45 @@
           "type": "SUBLISTITEM",
           "item": "SIGNS",
           "result": "ON",
-          // "condition": ""
+          condition: [
+            {
+              varName: "CABIN SEATBELTS ALERT SWITCH",
+              result: 1
+            },
+            {
+              varName: "L:XMLVAR_SWITCH_OVHD_INTLT_NOSMOKING_POSITION",
+              result: 2,
+              comp: "NE"
+            },
+            {
+              varName: "L:XMLVAR_SWITCH_OVHD_INTLT_EMEREXIT_POSITION",
+              result: 2,
+              comp: "NE"
+            },
+          ]
         },
         {
           "type": "SUBLISTITEM",
           "item": "LDG GEAR",
           "result": "DOWN",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_GEAR_CENTER_SMALL_POSITION",
+              result: 100
+            },
+            {
+              varName: "L:A32NX_GEAR_CENTER_POSITION",
+              result: 100
+            },
+            {
+              varName: "L:A32NX_GEAR_LEFT_POSITION",
+              result: 100
+            },
+            {
+              varName: "L:A32NX_GEAR_RIGHT_POSITION",
+              result: 100
+            }
+          ]
         },
         {
           "type": "SUBLISTITEM",
@@ -336,7 +446,12 @@
           "type": "SUBLISTITEM",
           "item": "SPLRs",
           "result": "ARM",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_SPOILERS_ARMED",
+              result: 1
+            }
+          ]
         }
       ]
     },
@@ -352,18 +467,37 @@
           "item": "SPLRS",
           "action": "DISARM",
           "result": "DISARMED",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_SPOILERS_ARMED",
+              result: 0
+            }
+          ]
         },
         {
           "item": "FLAPS",
           "result": "0",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_FLAPS_HANDLE_INDEX",
+              result: 0
+            }
+          ]
         },
         {
           "item": "APU",
           "action": "START",
           "result": "STARTED",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_OVHD_APU_MASTER_SW_PB_IS_ON",
+              result: 1
+            },
+            {
+              varName: "L:A32NX_OVHD_APU_START_PB_IS_AVAILABLE",
+              result: 1
+            }
+          ]
         }
       ]
     },
@@ -381,22 +515,143 @@
         },
         {
           "item": "APU BLEED",
-          "result": "ON"
+          "result": "ON",
+          condition: [
+            {
+              varName: "L:A32NX_OVHD_APU_MASTER_SW_PB_IS_ON",
+              result: 1
+            },
+            {
+              varName: "L:A32NX_OVHD_APU_START_PB_IS_AVAILABLE",
+              result: 1
+            },
+            {
+              varName: "L:A32NX_OVHD_PNEU_APU_BLEED_PB_IS_ON",
+              result: 1
+            }
+          ]
         },
         {
           "item": "ALL ENGs OFF",
           "result": "OFF",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_ENGINE_N1:1",
+              result: 3,
+              comp: "LE"
+            },
+            {
+              varName: "L:A32NX_ENGINE_N1:2",
+              result: 3,
+              comp: "LE"
+            },
+            {
+              varName: "L:A32NX_ENGINE_N1:3",
+              result: 3,
+              comp: "LE"
+            },
+            {
+              varName: "L:A32NX_ENGINE_N1:4",
+              result: 3,
+              comp: "LE"
+            }
+          ]
         },
         {
           "item": "FUEL PMPs",
           "result": "OFF",
-          // "condition": ""
+          condition: [
+            {
+              varName: "A:CIRCUIT CONNECTION ON:75",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:77",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:76",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:79",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:78",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:74",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:73",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:72",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:71",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:70",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:69",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:68",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:67",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:66",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:65",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:64",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:3",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:2",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:81",
+              result: 0
+            },
+            {
+              varName: "A:CIRCUIT CONNECTION ON:80",
+              result: 0
+            },
+          ]
         },
         {
           "item": "SEAT BELTS",
           "result": "OFF",
-          // "condition": ""
+          condition: [
+            {
+              varName: "CABIN SEATBELTS ALERT SWITCH",
+              result: 0
+            }
+          ]
         }
       ]
     },
@@ -407,22 +662,58 @@
         {
           "item": "ADIRS",
           "result": "OFF",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_OVHD_ADIRS_IR_1_MODE_SELECTOR_KNOB",
+              result: 0
+            },
+            {
+              varName: "L:A32NX_OVHD_ADIRS_IR_2_MODE_SELECTOR_KNOB",
+              result: 0,
+            },
+            {
+              varName: "L:A32NX_OVHD_ADIRS_IR_2_MODE_SELECTOR_KNOB",
+              result: 0,
+            },
+          ]
         },
         {
           "item": "OXYGEN",
           "result": "OFF",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:PUSH_OVHD_OXYGEN_CREW",
+              result: 0
+            }
+          ]
         },
         {
           "item": "SIGNS",
           "result": "OFF",
-          // "condition": ""
+          condition: [
+            {
+              varName: "CABIN SEATBELTS ALERT SWITCH",
+              result: 0
+            },
+            {
+              varName: "L:XMLVAR_SWITCH_OVHD_INTLT_NOSMOKING_POSITION",
+              result: 2
+            },
+            {
+              varName: "L:XMLVAR_SWITCH_OVHD_INTLT_EMEREXIT_POSITION",
+              result: 2
+            },
+          ]
         },
         {
           "item": "APU",
           "result": "OFF",
-          // "condition": ""
+          condition: [
+            {
+              varName: "L:A32NX_OVHD_APU_MASTER_SW_PB_IS_ON",
+              result: 0
+            }
+          ]
         },
         {
           "item": "LAPTOPS",
@@ -431,7 +722,24 @@
         {
           "item": "BATTERIES",
           "result": "OFF",
-          // "condition": ""
+          condition: [
+            {
+              varName: 'L:A32NX_OVHD_ELEC_BAT_1_PB_IS_AUTO',
+              result: 0
+            },
+            {
+              varName: 'L:A32NX_OVHD_ELEC_BAT_ESS_PB_IS_AUTO',
+              result: 0
+            },
+            {
+              varName: 'L:A32NX_OVHD_ELEC_BAT_2_PB_IS_AUTO',
+              result: 0
+            },
+            {
+              varName: 'L:A32NX_OVHD_ELEC_BAT_APU_PB_IS_AUTO',
+              result: 0
+            },
+          ]
         }
       ]
     }
