--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/a32nx_checklists.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/a32nx_checklists.json5
@@ -1,3 +1,14 @@
+// Checklist for the A32NX
+//
+// type?: string;                 // one of ITEM, LINE, SUBLISTHEADER, SUBLISTITEM
+// item: string;                  // checklist item
+// action?: string;               // the string shown before the item is completed
+// result: string;                // the string shown when the item is completed
+// condition?: ConditionType[];
+//    varName: string;            // the name of the SimVar or LVar to evaluate
+//    result: number;             // the numerical result to be compared to using the operation defined in comp
+//    comp?: string;              // one of NE !=, LT <, LE <=, EQ ==, GE >=, GT > | default = EQ if not defined
+//
 {
   "checklists": [
     {
@@ -16,12 +27,30 @@
         {
           "item": "SEAT BELTS",
           "result": "ON",
-          "condition": "checkSeatBeltsOn()"
+          "condition": [
+            {
+              varName: "CABIN SEATBELTS ALERT SWITCH",
+              result: 1
+            }
+          ]
         },
         {
           "item": "ADIRS",
           "result": "NAV",
-          "condition": "checkAdirsNav()"
+          "condition": [
+            {
+              varName: "L:A32NX_OVHD_ADIRS_IR_1_MODE_SELECTOR_KNOB",
+              result: 1
+            },
+            {
+              varName: "L:A32NX_OVHD_ADIRS_IR_2_MODE_SELECTOR_KNOB",
+              result: 1,
+            },
+            {
+              varName: "L:A32NX_OVHD_ADIRS_IR_2_MODE_SELECTOR_KNOB",
+              result: 1,
+            },
+          ]
         },
         {
           "item": "BARO REF",
@@ -43,12 +72,18 @@
         },
         {
           "item": "WINDOWS",
-          "result": "CLOSED (BOTH)"
+          "action": "CLOSE (BOTH)",
+          "result": "CLOSED"
         },
         {
           "item": "BEACON",
           "result": "ON",
-          "condition": "checkBeaconOn()"
+          "condition": [
+            {
+              varName: "LIGHT BEACON",
+              result: 1
+            },
+          ]
         }
       ]
     },
@@ -72,7 +107,12 @@
         {
           "item": "RUDDER TRIM",
           "result": "NEUTRAL",
-          "condition": "checkRudderTrimReset()"
+          "condition": [
+            {
+              varName: "RUDDER TRIM PCT",
+              result: 0
+            }
+          ]
         }
       ]
     },
@@ -91,7 +131,17 @@
         {
           "item": "RADAR & PRED W/S",
           "result": "ON & AUTO",
-          "condition": "checkWxOnPredWsAuto()"
+          "condition": [
+            {
+              varName: "L:XMLVAR_A320_WEATHERRADAR_SYS",
+              result: 1,
+              comp: "NE"
+            },
+            {
+              varName: "L:A32NX_SWITCH_RADAR_PWS_POSITION",
+              result: 1,
+            },
+          ]
         },
         {
           "item": "ENG MODE SEL",
@@ -136,7 +186,12 @@
         {
           "item": "SEAT BELTS",
           "result": "ON",
-          "condition": "checkSeatBeltsOn()"
+          "condition": [
+            {
+              varName: "CABIN SEATBELTS ALERT SWITCH",
+              result: 1
+            }
+          ]
         },
         {
           "item": "MINIMUM",
@@ -173,7 +228,16 @@
         {
           "item": "RADAR & PRED W/S",
           "result": "OFF",
-          "condition": "checkWxOffPredWsOff()"
+          "condition": [
+            {
+              varName: "L:XMLVAR_A320_WEATHERRADAR_SYS",
+              result: 1,
+            },
+            {
+              varName: "L:A32NX_SWITCH_RADAR_PWS_POSITION",
+              result: 0,
+            },
+          ]
         }
       ]
     },
@@ -188,22 +252,68 @@
         {
           "item": "ENGINES",
           "result": "OFF",
-          "condition": "checkA32NXEnginesOff()"
+          condition: [
+            {
+              varName: "L:A32NX_ENGINE_N1:1",
+              result: 3,
+              comp: "LE"
+            },
+            {
+              varName: "L:A32NX_ENGINE_N1:2",
+              result: 3,
+              comp: "LE"
+            },
+          ]
         },
         {
           "item": "WING LIGHTS",
           "result": "OFF",
-          "condition": "checkWingLtOff()"
+          condition: [
+            {
+              varName: "LIGHT WING",
+              result: 0
+            }
+          ]
         },
         {
           "item": "FUEL PUMPS",
           "result": "OFF",
-          "condition": "checkA32NXFuelPumpsOff()"
+          condition: [
+            {
+              varName: "FUELSYSTEM PUMP ACTIVE:1",
+              result: 0
+            },
+            {
+              varName: "FUELSYSTEM PUMP ACTIVE:2",
+              result: 0
+            },
+            {
+              varName: "FUELSYSTEM PUMP ACTIVE:3",
+              result: 0
+            },
+            {
+              varName: "FUELSYSTEM PUMP ACTIVE:4",
+              result: 0
+            },
+            {
+              varName: "FUELSYSTEM PUMP ACTIVE:5",
+              result: 0
+            },
+            {
+              varName: "FUELSYSTEM PUMP ACTIVE:6",
+              result: 0
+            },
+          ]
         },
         {
           "item": "YELLOW ELEC PUMP",
           "result": "OFF",
-          "condition": "checkYellowEPumpOff()"
+          condition: [
+            {
+              varName: "L:A32NX_OVHD_HYD_EPUMPY_PB_IS_AUTO",
+              result: 1
+            }
+          ]
         }
       ]
     },
@@ -214,17 +324,36 @@
         {
           "item": "OXYGEN",
           "result": "OFF",
-          "condition": "checkOxygenOff()"
+          condition: [
+            {
+              varName: "L:PUSH_OVHD_OXYGEN_CREW",
+              result: 0
+            }
+          ]
         },
         {
           "item": "EMER EXIT LT",
           "result": "OFF",
-          "condition": "checkEmerExtLtOff()"
+          condition: [
+            {
+              varName: "L:XMLVAR_SWITCH_OVHD_INTLT_EMEREXIT_POSITION",
+              result: 2
+            }
+          ]
         },
         {
           "item": "BATTERIES",
           "result": "OFF",
-          "condition": "checkA32NXBatOff()"
+          condition: [
+            {
+              varName: 'L:A32NX_OVHD_ELEC_BAT_1_PB_IS_AUTO',
+              result: 0
+            },
+            {
+              varName: 'L:A32NX_OVHD_ELEC_BAT_2_PB_IS_AUTO',
+              result: 0
+            },
+          ]
         }
       ]
     }
