Refactor, comment, lint errors and reorganize EFB Checklist code

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx_checklists.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx_checklists.json5
@@ -9,6 +9,8 @@
 //    result: number;             // the numerical result to be compared to using the operation defined in comp
 //    comp?: string;              // one of NE !=, LT <, LE <=, EQ ==, GE >=, GT > | default = EQ if not defined
 //
+// OBS: It is not recommended to override these default checklists yet as they are still being improved and the format
+//      off the default checklists might change. Any overriding will break when the format changes.
 {
   "checklists": [
     {
