GitHub build error fix

--- a/fbw-a32nx/src/systems/instruments/src/EFB/tsconfig.json
+++ b/fbw-a32nx/src/systems/instruments/src/EFB/tsconfig.json
@@ -9,6 +9,7 @@
       "@failures": ["./failures/src/index.ts"],
       "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"],
       "@flybywiresim/flypad": ["../../../fbw-common/src/systems/instruments/src/EFB/index.ts"],
+      "@flybywiresim/checklists": ["../../../fbw-common/src/systems/shared/src/checklists/index.ts"],
     }
   }
 }
