--- a/fbw-a380x/src/systems/instruments/src/EFB/tsconfig.json
+++ b/fbw-a380x/src/systems/instruments/src/EFB/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@instruments/common/*": ["./instruments/src/Common/*"],
       "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"],
-      "@flybywiresim/flypad": ["../../../fbw-common/src/systems/instruments/src/EFB/index.ts"]
+      "@flybywiresim/flypad": ["../../../fbw-common/src/systems/instruments/src/EFB/index.ts"],
+      "@flybywiresim/checklists": ["../../../fbw-common/src/systems/shared/src/checklists/index.ts"]
     }
   }
 }
