--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x_checklists.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x_checklists.json5
@@ -1,13 +1,34 @@
 // Checklist for the A380X
 //
-// type?: string;                 // one of ITEM, LINE, SUBLISTHEADER, SUBLISTITEM
-// item: string;                  // checklist item
-// action?: string;               // the string shown before the item is completed
-// result: string;                // the string shown when the item is completed
-// condition?: ConditionType[];
-//    varName: string;            // the name of the SimVar or LVar to evaluate
-//    result: number;             // the numerical result to be compared to using the operation defined in comp
-//    comp?: string;              // one of NE !=, LT <, LE <=, EQ ==, GE >=, GT > | default = EQ if not defined
+// Checklist
+//   name: string;                  // the name of the checklist
+//   items: ChecklistItem[];        // the list of items in the checklist
+//   flightphase: number;           // the flight phase this checklist is relevant for
+//
+// Checklist Item
+//   type?: string;                 // one of ITEM, LINE, SUBLISTHEADER, SUBLISTITEM
+//   item: string;                  // checklist item
+//   action?: string;               // the string shown before the item is completed
+//   result: string;                // the string shown when the item is completed
+//   condition?: ConditionType[];
+//      varName: string;            // the name of the SimVar or LVar to evaluate
+//      result: number;             // the numerical result to be compared to using the operation defined in comp
+//      comp?: string;              // one of NE !=, LT <, LE <=, EQ ==, GE >=, GT > | default = EQ if not defined
+//
+// | Value  | Flight Phase     |
+// |--------|------------------|
+// | 0      |                  |
+// | 1      | ELEC PWR         |
+// | 2      | 1ST ENG STARTED  |
+// | 3      | 1ST ENG TO PWR   |
+// | 4      | 80 kt            |
+// | 5      | LIFTOFF          |
+// | 6      | 1500ft (in clb)  |
+// | 7      | 800 ft (in desc) |
+// | 8      | TOUCHDOWN        |
+// | 9      | 80 kt            |
+// | 10     | 2nd ENG SHUTDOWN |
+// | &gt; 1 | 5 MIN AFTER      |
 //
 // OBS: It is not recommended to override these default checklists yet as they are still being improved and the format
 //      off the default checklists might change. Any overriding will break when the format changes.
@@ -16,6 +37,7 @@
     {
       // beforeStartChecklistA380X =================================================",
       "name": "BEFORE START",
+      "flightphase": 1,
       "items": [
         {
           "item": "CKPT PREP",
@@ -119,6 +141,7 @@
     {
       // afterStartChecklistA380X =================================================",
       "name": "AFTER START",
+      "flightphase": 2,
       "items": [
         {
           "item": "ANTI ICE",
@@ -154,6 +177,7 @@
     {
       // beforeTakeoffChecklistA380X =================================================",
       "name": "BEFORE TAKEOFF",
+      "flightphase": 2,
       "items": [
         {
           "item": "FLIGHT INSTRUMENTS",
@@ -252,6 +276,7 @@
     {
       // afterTakeoffChecklistA380X =================================================",
       "name": "AFTER TAKEOFF / CLIMB",
+      "flightphase": 6,
       "items": [
         {
           "item": "LDG GEAR",
@@ -335,6 +360,7 @@
     {
       // approachChecklistA380X =================================================",
       "name": "APPROACH",
+      "flightphase": 6,
       "items": [
         {
           "item": "CABIN CREW",
@@ -385,6 +411,7 @@
     {
       // landingChecklistA380X =================================================",
       "name": "LANDING",
+      "flightphase": 7,
       "items": [
         {
           "item": "A/THR MODE",
@@ -460,6 +487,7 @@
     {
       // afterLandingChecklistA380X =================================================",
       "name": "AFTER LANDING",
+      "flightphase": 9,
       "items": [
         {
           "item": "EXTERIOR LIGHTS",
@@ -506,6 +534,7 @@
     {
       // parkingChecklistA380X =================================================",
       "name": "PARKING",
+      "flightphase": 10,
       "items": [
         {
           "item": "PARK BRK or CHOCKS",
@@ -660,6 +689,7 @@
     {
       // securingAircraftChecklistA380X =================================================",
       "name": "SECURING AIRCRAFT",
+      "flightphase": 10,
       "items": [
         {
           "item": "ADIRS",
