Disable second ISIS; update colors for PFD tapes, PFD horizon, EWD THR gauges

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -92,7 +92,7 @@ size_mm=512,512
 pixel_size=512,512
 texture=$ISIS2
 
-htmlgauge00=A32NX/ISIS/isis.html, 0,0,512,512
+;htmlgauge00=A32NX/ISIS/isis.html, 0,0,512,512
 
 [VCockpit12]
 size_mm=256,256
