feat: VFS config for payload

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/airframe.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/airframe.json5
@@ -1,3 +1,10 @@
+// Copyright (c) 2024 FlyByWire Simulations
+// SPDX-License-Identifier: GPL-3.0
+// =======================================================================================
+// This is the base airframe configuration file for A320-251N
+// Any keys prefixed by underscore (_) should be considered read-only and not overwritable.
+// =======================================================================================
+// Last updated: 2 April 2024
 {
     "configMajorVersion": 0,
     "configMinorVersion": 1,
