--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/airframe.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/airframe.json5
@@ -3,10 +3,18 @@
 // =======================================================================================
 // This is the base airframe configuration file for A380-842
 // Any keys prefixed by underscore (_) should be considered read-only and not overwritable.
+//
+// NOTE: * This is currently a WIP * ! The override functionality has not been completed yet !
+//
+// ****** ! WARNING TO LIVERY MAKERS: DO NOT OVERRIDE THIS FILE ! **********
+// ****** ! WARNING TO LIVERY MAKERS: DO NOT OVERRIDE THIS FILE ! **********
+// ****** ! WARNING TO LIVERY MAKERS: DO NOT OVERRIDE THIS FILE ! **********
+// ****** ! WARNING TO LIVERY MAKERS: DO NOT OVERRIDE THIS FILE ! **********
+//
+// Please follow the instructions in the documentation to create a new configuration file!
 // =======================================================================================
 // Last updated: 2 April 2024
 {
-    // Last updated: 2 April 2024
     "configMajorVersion": 0,
     "configMinorVersion": 1,
     "_variant": "A380-842",
