--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/flight_model.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/flight_model.cfg
@@ -46,6 +46,7 @@ tailwheel_lock = 0 ; Is tailwheel lock available TRUE/FALSE
 max_number_of_points = 9 ; Number of contact points
 gear_locked_on_ground = 0 ; Defines whether or not the landing gear handle is locked to down when the plane is on the ground.
 gear_locked_above_speed = -1 ; Defines the speed at which the landing gear handle becomes locked in the up position. (-1 = Disabled)==> Disabled is kept in favor of an XML-based solution
+allow_stopped_steering = 1 ; This can be used to enable (TRUE, 1) steering when the aircraft is stopped or not (FALSE, 0).
 max_speed_full_steering = 300 ; Defines the speed under which the full angle of steering is available (in feet/second).==> 20 kts or 33.7 ft/sec (was 8)
 max_speed_decreasing_steering = 350 ; Defines the speed above which the angle of steering stops decreasing (in feet/second). ==> 40 kts or 67.5 ft/sec (was 50)
 min_available_steering_angle_pct = 0.0 ; Defines the percentage of steering which will always be available even above max_speed_decreasing_steering (in percent over 100) ===> 6 degrees or 0.08% of 75 degrees max deflection (was 0.2 or 15 degrees)
