restructure code, add A380X-only warnings

--- a/fbw-a380x/src/systems/instruments/src/PFD/config.json
+++ b/fbw-a380x/src/systems/instruments/src/PFD/config.json
@@ -2,6 +2,7 @@
   "index": "./instrument.tsx",
   "isInteractive": false,
   "extraDeps": [
-    "../MsfsAvionicsCommon"
+    "../MsfsAvionicsCommon",
+    "fbw-common/src/systems/instruments/src/PFD"
   ]
 }
