--- a/fbw-a380x/src/systems/instruments/src/PFD/tsconfig.json
+++ b/fbw-a380x/src/systems/instruments/src/PFD/tsconfig.json
@@ -21,7 +21,8 @@
       "@flybywiresim/failures": ["failures"],
       "@tcas/*": ["./tcas/src/*"],
       "@typings/*": ["../typings"],
-      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"]
+      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"],
+      "@flybywiresim/pfd": ["../../../fbw-common/src/systems/instruments/src/PFD/index.ts"]
     }
   }
 }
