Fixed rudder trim checklist autocheck for A32NX and removed it for A380X as not yet working

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx_checklists.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx_checklists.json5
@@ -135,7 +135,11 @@
           "result": "NEUTRAL",
           "condition": [
             {
-              varName: "RUDDER TRIM PCT",
+              varName: "L:A32NX_RUDDER_TRIM_1_COMMANDED_POSITION",
+              result: 0
+            },
+            {
+              varName: "L:A32NX_RUDDER_TRIM_2_COMMANDED_POSITION",
               result: 0
             }
           ]
