refactor: pushback page

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/flypad-misc.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/flypad-misc.json5
@@ -17,12 +17,19 @@
 {
     "configMajorVersion": 0,
     "configMinorVersion": 1,
-    "_throttleAxisOptions": [
-        1,
-        2
-    ],
+    "_throttle": {
+        "max": 2,
+        "axisOptions": [
+            1,
+            2
+        ],
+        "axisMapping": {
+            "1": [[1, 2]],
+            "2": [[1], [2]],
+        }
+    },
     "_pushback": {
-        "turnIndicatorTuningDefault": 1.35,
+        "turnIndicatorTuningDefault": 1.35, // determined by testing
         "aircraftWheelBase": 12.64,
         "aircraftLengthMeter": 37.57
     }
