--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/flypad-misc.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/flypad-misc.json5
@@ -17,11 +17,19 @@
 {
     "configMajorVersion": 0,
     "configMinorVersion": 1,
-    "_throttleAxisOptions": [
-        1,
-        2,
-        4
-    ],
+    "_throttle": {
+        "max": 4,
+        "axisOptions": [
+            1,
+            2,
+            4
+        ],
+        "axisMapping": {
+            "1": [[1, 2, 3, 4]],
+            "2": [[1, 2], [3, 4]],
+            "4": [[1], [2], [3], [4]]
+        }
+    },
     "_pushback": {
         "turnIndicatorTuningDefault": 1.35,
         "aircraftWheelBase": 31.9,
