--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -149,7 +149,7 @@ pixel_size = 0,0
 texture = NO_TEXTURE
 background_color = 0,0,0
 
-htmlgauge00 = A32NX/ExtrasHost/extras-host.html?Airframe=A320_251N,0,0,1,1
+htmlgauge00 = A32NX/ExtrasHost/extras-host.html,0,0,1,1
 
 [VPainting01]
 size_mm = 2048,512
