﻿A380X: GPWS PFD alerts, ROP/ROW aural alerts, A32NX: Add GPWS discrete word to GPWS, Both: warnings position update

--- a/fbw-a380x/src/systems/instruments/src/PFD/tsconfig.json
+++ b/fbw-a380x/src/systems/instruments/src/PFD/tsconfig.json
@@ -22,7 +22,8 @@
       "@tcas/*": ["./tcas/src/*"],
       "@typings/*": ["../typings"],
       "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"],
-      "@flybywiresim/pfd": ["../../../fbw-common/src/systems/instruments/src/PFD/index.ts"]
+      "@flybywiresim/pfd": ["../../../fbw-common/src/systems/instruments/src/PFD/index.ts"],
+      "@flybywiresim/msfs-avionics-common": ["../../../fbw-common/src/systems/instruments/src/MsfsAvionicsCommon/index.ts"]
     }
   }
 }
