refactor: simbrief ID, developer key in airframe.json, numberofAxis key in flypad-misc.json

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/airframe.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/airframe.json5
@@ -21,6 +21,7 @@
     "_icao": "A20N",
     "_name": "Airbus A320neo",
     "_engines": "CFM LEAP-1A26",
+    "_developer": "FBW",
     "msnReference": "MSN 9XXX",
     "weightVariant": "WV055",
     "designLimits": {
