--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/flypad-misc.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/flypad-misc.json5
@@ -18,7 +18,7 @@
     "configMajorVersion": 0,
     "configMinorVersion": 1,
     "_throttle": {
-        "max": 4,
+        "numberOfAxis": 4,
         "axisOptions": [
             1,
             2,
