--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/flypad-misc.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/flypad-misc.json5
@@ -18,7 +18,7 @@
     "configMajorVersion": 0,
     "configMinorVersion": 1,
     "_throttle": {
-        "max": 2,
+        "numberOfAxis": 2,
         "axisOptions": [
             1,
             2
