--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/airframe.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/airframe.json5
@@ -21,6 +21,7 @@
     "_icao": "A388",
     "_name": "Airbus A380",
     "_engines": "RR Trent 972B-84",
+    "_developer": "FBW",
     "msnReference": "MSN 225",
     "weightVariant": "WV003",
     "designLimits": {
