refactor: pushback page, flypad -> airframe dimensions , cleanup

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/flypad-misc.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/flypad-misc.json5
@@ -23,14 +23,12 @@
             1,
             2
         ],
-        "axisMapping": {
-            "1": [[1, 2]],
-            "2": [[1], [2]],
-        }
+        "axisMapping": [
+            [[1, 2]],   // 1
+            [[1], [2]], // 2
+        ]
     },
     "_pushback": {
         "turnIndicatorTuningDefault": 1.35, // determined by testing
-        "aircraftWheelBase": 12.64,
-        "aircraftLengthMeter": 37.57
     }
 }
