--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/airframe.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/airframe.json5
@@ -72,5 +72,9 @@
                 [ 43, 270000 ]
             ]
         }
+    },
+    "_dimensions": {
+        "aircraftWheelBase":  31.9,
+        "aircraftLengthMeter": 72.72
     }
 }
