--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/flypad-misc.json5
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/config/a380x/a380-842/flypad-misc.json5
@@ -24,15 +24,13 @@
             2,
             4
         ],
-        "axisMapping": {
-            "1": [[1, 2, 3, 4]],
-            "2": [[1, 2], [3, 4]],
-            "4": [[1], [2], [3], [4]]
-        }
+        "axisMapping": [
+            [[1, 2, 3, 4]],      // 1
+            [[1, 2], [3, 4]],    // 2
+            [[1], [2], [3], [4]] // 4
+        ]
     },
     "_pushback": {
-        "turnIndicatorTuningDefault": 1.35,
-        "aircraftWheelBase": 31.9,
-        "aircraftLengthMeter": 72.72
+        "turnIndicatorTuningDefault": 1.35, // determined by testing
     }
 }
