--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/airframe.json5
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/config/a32nx/a320-251n/airframe.json5
@@ -84,5 +84,9 @@
                 [ 13, 42500 ]
             ]
         }
+    },
+    "_dimensions": {
+        "aircraftWheelBase": 12.64,
+        "aircraftLengthMeter": 37.57
     }
 }
