Refactored AircraftPresets to use an XML configuration file

--- a/fbw-common/src/wasm/cpp-msfs-framework/CMakeLists.txt
+++ b/fbw-common/src/wasm/cpp-msfs-framework/CMakeLists.txt
@@ -6,7 +6,8 @@ set(SOURCE_FILES
     MsfsHandler/DataTypes/ClientEvent.cpp
     MsfsHandler/DataTypes/NamedVariable.cpp
     MsfsHandler/MsfsHandler.cpp
-)
+    lib/pugixml/pugixml.cpp
+    )
 set(INCLUDE_FILES
     MsfsHandler/DataManager.h
     MsfsHandler/DataTypes/AircraftVariable.h
@@ -32,6 +33,7 @@ set(INCLUDE_FILES
     lib/logging.h
     lib/math_utils.hpp
     lib/ProfileBuffer.hpp
+    lib/pugixml/pugixml.hpp
     lib/ScopedTimer.hpp
     lib/SimpleProfiler.hpp
     lib/simple_assert.h
